--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,5 +22,6 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/workshop_field_margin"/>
+        android:layout_marginTop="@dimen/workshop_field_margin"
+        android:text="@string/workshop_continue"/>
 </LinearLayout>
