--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,7 @@
     android:layout_margin="@dimen/workshop_screen_margin">
 
     <EditText
+        android:id="@+id/user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/workshop_field_margin"
@@ -20,6 +21,7 @@
         android:fadingEdge="horizontal"/>
 
     <EditText
+        android:id="@+id/user_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/workshop_field_margin"
@@ -30,6 +32,7 @@
         android:fadingEdge="horizontal"/>
 
     <Button
+        android:id="@+id/continue_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/workshop_field_margin"
